client-api/overlays/production/b2b/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: client-api-b2b
  namespace: client-api
spec:
  rules:
    - host: b2b-api.luuna.mx
      http:
        paths:
          - backend:
              service:
                name: client-api-b2b
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
